# Multi-machine-collaboration

./: .gitignore  LIMO_S2双车集群控制操作手册.md  README.md  limo_manual.txt
catkin_ws/src/cluster_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/cluster_bringup/config/: cmd_safety_filter_params.yaml  follower_params.yaml  formation_params.yaml  map_follower_params.yaml
catkin_ws/src/cluster_bringup/launch/: car1_bringup.launch  car1_full_map.launch  car1_lidar.launch  car1_mapping.launch  car1_master.launch  car1_no_lidar.launch  car2_bringup.launch  car2_full_map.launch  car2_lidar.launch  car2_no_lidar.launch  car2_slave.launch  cluster_system.launch  ld14_lidar.launch  map_follower.launch  multi_amcl.launch  namespaced_tf.launch  sim_test.launch  start_map_follower.launch
catkin_ws/src/cluster_bringup/scripts/: fake_odom_publisher.py  odom_tf_republisher.py  scan_frame_republisher.py  setup_network.sh  start_car1_master.sh  start_car2_slave.sh  start_keyboard.sh  start_map_follower.sh  teleop_keyboard.py
catkin_ws/src/cluster_common/: CMakeLists.txt  package.xml
catkin_ws/src/cluster_common/include/cluster_common/: pid.h  pose_utils.h
catkin_ws/src/cluster_common/src/: pid.cpp  pose_utils.cpp
catkin_ws/src/cluster_following/: CMakeLists.txt  package.xml
catkin_ws/src/cluster_following/cfg/: FollowerParams.cfg
catkin_ws/src/cluster_following/include/cluster_following/: follower_controller.h
catkin_ws/src/cluster_following/src/: cmd_safety_filter_node.cpp  follower_controller.cpp  follower_controller_node.cpp  map_follower_controller_node.cpp
catkin_ws/src/cluster_formation/: CMakeLists.txt  package.xml
catkin_ws/src/cluster_formation/cfg/: FormationParams.cfg
catkin_ws/src/cluster_formation/include/cluster_formation/: leader_controller.h
catkin_ws/src/cluster_formation/src/: leader_controller.cpp  leader_controller_node.cpp
catkin_ws/src/cluster_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/cluster_msgs/msg/: FollowerStatus.msg  LeaderCmd.msg
catkin_ws/src/cluster_msgs/srv/: SetFormation.srv  SetMode.srv
limo_ros_ref/: limo_navigation_diff.launch  limo_start.launch  map01.pgm
