<?xml version="1.0"?>
<package format="2">
  <name>cluster_common</name>
  <version>0.1.0</version>
  <description>Shared utilities for cluster control: PID controller, pose math</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cluster_msgs</depend>
</package>
